# aoc

./: LICENSE
2022/day1/src/: main.rs
2022/day2/src/: main.rs
2022/day3/src/: main.rs
2022/day4/src/: main.rs
2022/day5/src/: main.rs
2022/day6/src/: main.rs
2022/day7/: Cargo.toml
2022/day7/src/: main.rs
2023/day01/: CMakeLists.txt  build.sh  day1.cpp
2023/day02/: CMakeLists.txt  build.sh  day2.cpp
2023/day03/: CMakeLists.txt  build.sh  day3.cpp
2023/day04/: CMakeLists.txt  build.sh  day4.cpp
2023/day05/: CMakeLists.txt  build.sh  day5.cpp  readme.md
2023/day06/: CMakeLists.txt  build.sh  day6.cpp
2023/day07/: CMakeLists.txt  build.sh  day7.cpp
